--- a/src/app/core/components/app-menu/app-menu.component.html
+++ b/src/app/core/components/app-menu/app-menu.component.html
@@ -1,18 +1,28 @@
 <div id="app-menu-logo" routerLink="/">
-  <img [src]="logoUrl" matTooltip="Coffee Paste home" matTooltipPosition="right">
+  <img [src]="logoUrl" title="Home">
 </div>
 <div class="app-menu-item" mat-ripple matRippleColor="rgba(255, 255, 255, 0.1)"
-  matTooltip="Tooltip" matTooltipPosition="right" matTooltipShowDelay="150">
-  <div class="app-menu-item-wrapper">
+  routerLink="/dashboard" routerLinkActive="active">
+  <div class="app-menu-icon-wrapper">
     <span class="app-menu-dot"></span>
-    <mat-icon>equalizer</mat-icon>
+    <mat-icon>dashboard</mat-icon>
   </div>
+  <span class="app-menu-title">Dashboard</span>
+</div>
+<div class="app-menu-item" mat-ripple matRippleColor="rgba(255, 255, 255, 0.1)">
+  <div class="app-menu-icon-wrapper">
+    <span class="app-menu-dot"></span>
+    <mat-icon>forum</mat-icon>
+  </div>
+  <span class="app-menu-title">Chat</span>
 </div>
 <span class="spacer"></span>
 <div class="app-menu-item" mat-ripple matRippleColor="rgba(255, 255, 255, 0.1)"
-  matTooltip="Settings" matTooltipPosition="right" matTooltipShowDelay="150">
-  <div class="app-menu-item-wrapper">
+  routerLink="/admin" routerLinkActive="active">
+  <div class="app-menu-icon-wrapper">
     <span class="app-menu-dot"></span>
     <mat-icon>settings</mat-icon>
   </div>
+  <span class="app-menu-title">Application Settings</span>
 </div>
+<app-user></app-user>
