--- a/src/app/core/components/app-menu/app-menu.component.scss
+++ b/src/app/core/components/app-menu/app-menu.component.scss
@@ -25,22 +25,46 @@
         width: 50px;
     }
 }
+.app-menu-dot {
+    display: none;
+    background-color: #f6d282;
+    border-radius: 50%;
+    height: 12px;
+    width: 12px;
+    position: absolute;
+    right: -6px;
+    top: -6px;
+    border: 2px solid #ce5169;
+    transition: 150ms ease-out;
+}
 .app-menu-item {
     position: relative;
     display: flex;
+    flex-direction: column;
     color: #ffffff;
     cursor: pointer;
-    height: 3.5rem;
+    height: 80px;
     transition: 150ms ease-out;
+    user-select: none;
     &.active,  &:hover {
+        background-color: #a64262;
         color: #f6d282;
         outline: none;
+        .app-menu-dot {
+            border-color: #a64262;
+        }
     }
 }
-.app-menu-item-wrapper {
+.app-menu-icon-wrapper {
     position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: auto;
+    margin: auto auto 2px auto;
+}
+.app-menu-title {
+    margin: 3px auto auto auto;
+    text-align: center;
+    font-size: .8rem;
+    line-height: 1rem;
 }
