--- a/src/app/core/components/notifications/notifications.component.html
+++ b/src/app/core/components/notifications/notifications.component.html
@@ -1,5 +1,5 @@
 <div class="page-header">
-    <div class="page-title">Dashboard</div>
+    <div class="page-title">Notifications</div>
     <span class="spacer"></span>
 </div>
 <div class="page-content"></div>
