--- a/src/app/core/components/app-user/app-user.component.html
+++ b/src/app/core/components/app-user/app-user.component.html
@@ -1,34 +1,34 @@
 <app-avatar [size]="'small'" [matMenuTriggerFor]="menu">
 </app-avatar>
-<mat-menu #menu="matMenu" [overlapTrigger]="true">
-  <a id="au-user">
+<mat-menu class="au-menu" #menu="matMenu" [overlapTrigger]="true">
+  <a class="au-user">
     <div class="user-avatar">
         <app-avatar [size]="'small'"></app-avatar>
     </div>
-    <div id="au-details">
+    <div class="au-details">
       <div class="au-name">User Name</div>
       <div class="au-username">@username</div>
       <div class="au-mail">{{ user.email }}</div>
     </div>
   </a>
-  <button mat-menu-item routerLink="/profile">
+  <button class="au-btn" mat-menu-item routerLink="/profile">
     <mat-icon>account_box</mat-icon>
     <span>Your Profile</span>
   </button>
-  <button mat-menu-item routerLink="/" (click)="signOut()">
+  <button class="au-btn" mat-menu-item routerLink="/" (click)="signOut()">
     <mat-icon>exit_to_app</mat-icon>
     <span>Sign Out</span>
   </button>
   <mat-divider></mat-divider>
-  <button mat-menu-item>
+  <button class="au-btn" mat-menu-item>
     <mat-icon>settings</mat-icon>
     <span>Settings</span>
   </button>
-  <button mat-menu-item>
+  <button class="au-btn" mat-menu-item>
     <mat-icon>help</mat-icon>
     <span>Need help?</span>
   </button>
-  <button mat-menu-item>
+  <button class="au-btn" mat-menu-item>
     <mat-icon>rate_review</mat-icon>
     <span>Send feedback</span>
   </button>
